# cpp-skeleton

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  DownloadProject.CMakeLists.cmake.in  LICENSE  README.md
.github/workflows/: cmake-multi-platform.yml
cmake/: common.cmake  googletest.cmake  log4cplus.cmake
example/: CMakeLists.txt  log.conf  main.cpp
googletest/: CMakeLists.txt
interfaces/: ILogger.h  LoggerLog4Cplus.h
log4cplus/: CMakeLists.txt
messages/: CMakeLists.txt  Communicator.cpp  Communicator.h  ICommunicator.h  IMessages.h  Messages.cpp  Messages.h  test-protobuf.proto
src/: CMakeLists.txt  Factory.cpp  Factory.h  Logger.h  log.conf  main.cpp
test/: CMakeLists.txt  LoggerTest.cpp  ProtocolTest.cpp  TestMain.cpp
tests/: CMakeLists.txt  LoggerTest.cpp  TestMain.cpp
